# Cmake-Task-1007

./: README.md
n1007/: CMakeLists.txt
n1007/n1007/: Bezier_curve.cpp  Bezier_curve.h  CMakeLists.txt  Data.cpp  Data.h  Point.h  Point_2D.cpp  Point_2D.h  Point_3D.cpp  Point_3D.h  n1007.cpp  n1007.h
